--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>Amplify your posts with our premium boosting services for maximum visibility.</p>
       </div>
       <div class="feature">
-        <h3>Business Database Access</h3>
+        <a href="https://mfvcz344q0.space.minimax.io/"<h3>Business Database Access</h3></a>
         <p>Exclusive access to our comprehensive business database for targeted marketing.</p>
       </div>
     </div>
