--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LaRomana.com | Facebook Marketing Solutions</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
   <header>
@@ -35,29 +36,33 @@
     <h2>Powerful Features for Your Success</h2>
     <p>Everything you need to dominate Facebook marketing</p>
     <div class="features-grid">
-      <div class="feature">
+      <a href="#" class="feature">
+        <img src="https://cdn-icons-png.flaticon.com/128/1384/1384005.png" alt="Ad Icon" width="32">
         <h3>Facebook Ad Placement</h3>
         <p>Strategic ad placement to maximize your reach and engagement on Facebook's platform.</p>
-      </div>
-      <div class="feature">
+      </a>
+      <a href="#" class="feature">
+        <img src="https://cdn-icons-png.flaticon.com/128/1828/1828884.png" alt="Posting Icon" width="32">
         <h3>Professional Posting</h3>
         <p>Expert content creation and posting services to maintain your brand presence.</p>
-      </div>
-      <div class="feature">
+      </a>
+      <a href="#" class="feature">
+        <img src="https://cdn-icons-png.flaticon.com/128/2921/2921222.png" alt="Boost Icon" width="32">
         <h3>Boosting Services</h3>
         <p>Amplify your posts with our premium boosting services for maximum visibility.</p>
-      </div>
-      <div class="feature">
-        <a href="https://mfvcz344q0.space.minimax.io/"<h3>Business Database Access</h3></a>
-        <p>Exclusive access to our comprehensive business database for targeted marketing.</p>
-      </div>
+      </a>
+      <a href="https://mfvcz344q0.space.minimax.io/" target="_blank" class="feature">
+        <img src="https://cdn-icons-png.flaticon.com/128/535/535239.png" alt="Directory Icon" width="32">
+        <h3>Business Directory</h3>
+        <p>Exclusive access to our comprehensive business directory for targeted marketing.</p>
+      </a>
     </div>
   </section>
 
   <section class="campaign-section">
     <h2>Start Your Campaign Today</h2>
     <p>Join hundreds of businesses in La Romana who are growing their reach with our Facebook advertising platform.</p>
-    <button>Access Business Database</button>
+    <a href="https://mfvcz344q0.space.minimax.io/" target="_blank" class="btn-primary">Access Business Directory</a>
     <div class="campaign-grid">
       <div class="feature">
         <h3>Target Your Audience</h3>
@@ -85,7 +90,7 @@
       <ul class="features-list">
         <li>✔ Facebook Ad Placement</li>
         <li>✔ Professional Content Posting</li>
-        <li>✔ Business Database Access</li>
+        <li>✔ Business Directory Access</li>
         <li>✔ Monthly Analytics Report</li>
         <li>✔ 24/7 Customer Support</li>
         <li>✔ Campaign Optimization</li>
@@ -101,8 +106,32 @@
     <img src="sale.PNG" alt="Special Offer" class="promo-image">
   </section>
 
+  <section class="signup-section" id="contact">
+    <h2>Ready to Get Started?</h2>
+    <p>Fill out the form below and we'll be in touch shortly.</p>
+    <form id="signupForm">
+      <input type="text" name="name" placeholder="Your Name" required><br>
+      <input type="email" name="email" placeholder="Your Email" required><br>
+      <textarea name="message" placeholder="Your Message" required></textarea><br>
+      <div class="g-recaptcha" data-sitekey="your-public-site-key"></div>
+      <br>
+      <button type="submit" class="btn-primary">Sign Up Now</button>
+    </form>
+  </section>
+
   <footer>
     &copy; 2025 LaRomana.com. All rights reserved.
   </footer>
+
+  <script>
+    document.getElementById('signupForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+
+      // This requires server-side support for emailing + captcha validation
+      alert('Thank you for signing up! A confirmation has been sent to your email.');
+      window.location.href = 'thank-you.html';
+    });
+  </script>
 </body>
 </html>
