--- a/index.html
+++ b/index.html
@@ -15,136 +15,62 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="header-logo">
-      <img src="LAROMANA.png" alt="LaRomana Logo">
-      <strong>LaRomana.com</strong>
-    </div>
-    <nav>
-      <a href="#features">Features</a>
-      <a href="#pricing">Pricing</a>
-      <a href="#contact">Contact</a>
-      <button class="btn-primary">Get Started</button>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <img src="LAROMANA.png" alt="LaRomana Logo" class="hero-logo" />
-    <h1>LaRomana.com</h1>
-    <h2>Professional Facebook Marketing Solutions</h2>
-    <p>Boost your business with our comprehensive Facebook advertising and posting services. Access our exclusive Business Database and watch your reach grow exponentially.</p>
-    <div class="hero-buttons">
-      <button class="start">Get Started Today</button>
-      <button class="learn">Learn More</button>
-    </div>
-  </section>
-
-  <section class="features-section" id="features">
-    <h2>Powerful Features for Your Success</h2>
-    <p>Everything you need to dominate Facebook marketing</p>
-    <div class="features-grid">
-      <a href="#" class="feature">
-        <img src="https://cdn-icons-png.flaticon.com/128/1384/1384005.png" alt="Ad Icon" width="32">
-        <h3>Facebook Ad Placement</h3>
-        <p>Strategic ad placement to maximize your reach and engagement on Facebook's platform.</p>
-      </a>
-      <a href="#" class="feature">
-        <img src="https://cdn-icons-png.flaticon.com/128/1828/1828884.png" alt="Posting Icon" width="32">
-        <h3>Professional Posting</h3>
-        <p>Expert content creation and posting services to maintain your brand presence.</p>
-      </a>
-      <a href="#" class="feature">
-        <img src="https://cdn-icons-png.flaticon.com/128/2921/2921222.png" alt="Boost Icon" width="32">
-        <h3>Boosting Services</h3>
-        <p>Amplify your posts with our premium boosting services for maximum visibility.</p>
-      </a>
-      <a href="https://mfvcz344q0.space.minimax.io/" target="_blank" class="feature">
-        <img src="https://cdn-icons-png.flaticon.com/128/535/535239.png" alt="Directory Icon" width="32">
-        <h3>Business Directory</h3>
-        <p>Exclusive access to our comprehensive business directory for targeted marketing.</p>
-      </a>
-    </div>
-  </section>
-
-  <section class="campaign-section">
-    <h2>Start Your Campaign Today</h2>
-    <p>Join hundreds of businesses in La Romana who are growing their reach with our Facebook advertising platform.</p>
-    <a href="https://mfvcz344q0.space.minimax.io/" target="_blank" class="btn-primary">Access Business Directory</a>
-    <div class="campaign-grid">
-      <div class="feature">
-        <h3>Target Your Audience</h3>
-        <p>Reach customers in La Romana and the Eastern Region with precision targeting.</p>
-      </div>
-      <div class="feature">
-        <h3>Business Directory</h3>
-        <p>Get listed in our comprehensive business database with map integration.</p>
-      </div>
-      <div class="feature">
-        <h3>Easy Discovery</h3>
-        <p>Help customers find your business with our search and location features.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="pricing-section" id="pricing">
-    <h2>Simple, Transparent Pricing</h2>
-    <p>Everything you need to succeed on Facebook</p>
-    <div class="pricing-box">
-      <div class="badge">⭐ Most Popular</div>
-      <h3>Professional Package</h3>
-      <h1><span class="price-highlight">$2,500</span> RD Pesos/month</h1>
-      <p>Complete Facebook marketing solution for your business</p>
-      <ul class="features-list">
-        <li>✔ Facebook Ad Placement</li>
-        <li>✔ Professional Content Posting</li>
-        <li>✔ Business Directory Access</li>
-        <li>✔ Monthly Analytics Report</li>
-        <li>✔ 24/7 Customer Support</li>
-        <li>✔ Campaign Optimization</li>
-      </ul>
-      <p><strong>Available Add-ons:</strong></p>
-      <ul class="addons">
-        <li>☐ Post Boosting Services</li>
-        <li>☐ Premium Analytics</li>
-        <li>☐ Custom Content Creation</li>
-      </ul>
-      <button class="btn-primary">Start Your Campaign</button>
-    </div>
-    <img src="sale.PNG" alt="Special Offer" class="promo-image">
-  </section>
-
-  <section class="form-section" id="contact">
-    <h2>Ready to Get Started?</h2>
-    <p>Contact us today for a free consultation</p>
-    <img src="form.PNG" alt="Contact Form Screenshot" style="max-width: 100%; border-radius: 12px; margin: 2rem auto; display: block;">
-    <form id="signupForm">
-      <input type="text" name="name" placeholder="Full Name" required><br>
-      <input type="email" name="email" placeholder="Email" required><br>
-      <input type="text" name="phone" placeholder="Phone"><br>
-      <input type="text" name="company" placeholder="Company"><br>
-      <select name="service">
-        <option value="">Select a service</option>
-        <option value="ads">Facebook Ads</option>
-        <option value="content">Content Posting</option>
-        <option value="boost">Boosting</option>
-        <option value="directory">Business Directory</option>
-      </select><br>
-      <textarea name="message" placeholder="Tell us about your Facebook marketing goals..." required></textarea><br>
-      <div class="g-recaptcha" data-sitekey="your-public-site-key"></div>
-      <br>
-      <button type="submit" class="btn-primary">Send Message</button>
-    </form>
-  </section>
-
-  <footer>
-    <img src="footer.PNG" alt="Footer Image" style="width: 100%;">
-  </footer>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LaRomana.com | Facebook Marketing Solutions</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <!-- Header, Sections, and Footer content here as previously structured -->
+  
+    <script>
+      document.getElementById('signupForm').addEventListener('submit', function(e) {
+        e.preventDefault();
+        const formData = new FormData(this);
+        alert('Thank you for signing up! A confirmation has been sent to your email.');
+        window.location.href = 'thank-you.html';
+      });
+    </script>
+  </body>
+  </html>
 
   <script>
     document.getElementById('signupForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const formData = new FormData(this);
 
+      alert('Thank you for signing up! A confirmation has been sent to your email.');
+      window.location.href = 'thank-you.html';
+    });
+  </script>
+</body>
+</html>
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LaRomana.com | Facebook Marketing Solutions</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <!-- Header, Sections, and Footer content here as previously structured -->
+
+  <script>
+    document.getElementById('signupForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const formData = new FormData(this);
       alert('Thank you for signing up! A confirmation has been sent to your email.');
       window.location.href = 'thank-you.html';
     });
