--- a/index.html
+++ b/index.html
@@ -5,75 +5,104 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LaRomana.com | Facebook Marketing Solutions</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <style>
-    a.feature {
-      text-decoration: none;
-      color: black;
-      font-weight: bold;
-    }
-  </style>
 </head>
 <body>
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LaRomana.com | Facebook Marketing Solutions</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <!-- Header, Sections, and Footer content here as previously structured -->
-  
-    <script>
-      document.getElementById('signupForm').addEventListener('submit', function(e) {
-        e.preventDefault();
-        const formData = new FormData(this);
-        alert('Thank you for signing up! A confirmation has been sent to your email.');
-        window.location.href = 'thank-you.html';
-      });
-    </script>
-  </body>
-  </html>
+  <header>
+    <div class="header-logo">
+      <img src="LAROMANA.png" alt="LaRomana Logo">
+      <strong>LaRomana.com</strong>
+    </div>
+    <nav>
+      <a href="#features">Features</a>
+      <a href="#pricing">Pricing</a>
+      <a href="#contact">Contact</a>
+      <button class="btn-primary">Get Started</button>
+    </nav>
+  </header>
 
-  <script>
-    document.getElementById('signupForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const formData = new FormData(this);
+  <section class="hero">
+    <img src="LAROMANA.png" alt="LaRomana Logo" class="hero-logo" />
+    <h1>LaRomana.com</h1>
+    <h2>Professional Facebook Marketing Solutions</h2>
+    <p>Boost your business with our comprehensive Facebook advertising and posting services. Access our exclusive Business Database and watch your reach grow exponentially.</p>
+    <div class="hero-buttons">
+      <button class="start">Get Started Today</button>
+      <button class="learn">Learn More</button>
+    </div>
+  </section>
 
-      alert('Thank you for signing up! A confirmation has been sent to your email.');
-      window.location.href = 'thank-you.html';
-    });
-  </script>
-</body>
-</html>
+  <section class="features-section" id="features">
+    <h2>Powerful Features for Your Success</h2>
+    <p>Everything you need to dominate Facebook marketing</p>
+    <div class="features-grid">
+      <div class="feature">
+        <h3>Facebook Ad Placement</h3>
+        <p>Strategic ad placement to maximize your reach and engagement on Facebook's platform.</p>
+      </div>
+      <div class="feature">
+        <h3>Professional Posting</h3>
+        <p>Expert content creation and posting services to maintain your brand presence.</p>
+      </div>
+      <div class="feature">
+        <h3>Boosting Services</h3>
+        <p>Amplify your posts with our premium boosting services for maximum visibility.</p>
+      </div>
+      <div class="feature">
+        <h3>Business Database Access</h3>
+        <p>Exclusive access to our comprehensive business database for targeted marketing.</p>
+      </div>
+    </div>
+  </section>
 
+  <section class="campaign-section">
+    <h2>Start Your Campaign Today</h2>
+    <p>Join hundreds of businesses in La Romana who are growing their reach with our Facebook advertising platform.</p>
+    <button>Access Business Database</button>
+    <div class="campaign-grid">
+      <div class="feature">
+        <h3>Target Your Audience</h3>
+        <p>Reach customers in La Romana and the Eastern Region with precision targeting.</p>
+      </div>
+      <div class="feature">
+        <h3>Business Directory</h3>
+        <p>Get listed in our comprehensive business database with map integration.</p>
+      </div>
+      <div class="feature">
+        <h3>Easy Discovery</h3>
+        <p>Help customers find your business with our search and location features.</p>
+      </div>
+    </div>
+  </section>
 
+  <section class="pricing-section" id="pricing">
+    <h2>Simple, Transparent Pricing</h2>
+    <p>Everything you need to succeed on Facebook</p>
+    <div class="pricing-box">
+      <div class="badge">⭐ Most Popular</div>
+      <h3>Professional Package</h3>
+      <h1><span class="price-highlight">$2,500</span> RD Pesos/month</h1>
+      <p>Complete Facebook marketing solution for your business</p>
+      <ul class="features-list">
+        <li>✔ Facebook Ad Placement</li>
+        <li>✔ Professional Content Posting</li>
+        <li>✔ Business Database Access</li>
+        <li>✔ Monthly Analytics Report</li>
+        <li>✔ 24/7 Customer Support</li>
+        <li>✔ Campaign Optimization</li>
+      </ul>
+      <p><strong>Available Add-ons:</strong></p>
+      <ul class="addons">
+        <li>☐ Post Boosting Services</li>
+        <li>☐ Premium Analytics</li>
+        <li>☐ Custom Content Creation</li>
+      </ul>
+      <button class="btn-primary">Start Your Campaign</button>
+    </div>
+    <img src="sale.PNG" alt="Special Offer" class="promo-image">
+  </section>
 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LaRomana.com | Facebook Marketing Solutions</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <!-- Header, Sections, and Footer content here as previously structured -->
-
-  <script>
-    document.getElementById('signupForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const formData = new FormData(this);
-      alert('Thank you for signing up! A confirmation has been sent to your email.');
-      window.location.href = 'thank-you.html';
-    });
-  </script>
+  <footer>
+    &copy; 2025 LaRomana.com. All rights reserved.
+  </footer>
 </body>
 </html>
