--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LaRomana.com | Facebook Marketing Solutions</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -104,5 +106,14 @@
   <footer>
     &copy; 2025 LaRomana.com. All rights reserved.
   </footer>
+
+  <script>
+    document.getElementById('signupForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+      alert('Thank you for signing up! A confirmation has been sent to your email.');
+      window.location.href = 'thank-you.html';
+    });
+  </script>
 </body>
 </html>
