--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
   <header>
     <div class="header-logo">
       <img src="LAROMANA.png" alt="LaRomana Logo">
@@ -18,7 +19,7 @@
       <a href="#features">Features</a>
       <a href="#pricing">Pricing</a>
       <a href="#contact">Contact</a>
-      <button class="btn-primary">Get Started</button>
+      <a href="#contact" class="btn-primary">Get Started</a>
     </nav>
   </header>
 
@@ -37,29 +38,33 @@
     <h2>Powerful Features for Your Success</h2>
     <p>Everything you need to dominate Facebook marketing</p>
     <div class="features-grid">
-      <div class="feature">
+      <a href="#" class="feature">
+        <img src="https://cdn-icons-png.flaticon.com/128/1384/1384005.png" alt="Ad Icon" width="32">
         <h3>Facebook Ad Placement</h3>
         <p>Strategic ad placement to maximize your reach and engagement on Facebook's platform.</p>
-      </div>
-      <div class="feature">
+      </a>
+      <a href="#" class="feature">
+        <img src="https://cdn-icons-png.flaticon.com/128/1828/1828884.png" alt="Posting Icon" width="32">
         <h3>Professional Posting</h3>
         <p>Expert content creation and posting services to maintain your brand presence.</p>
-      </div>
-      <div class="feature">
+      </a>
+      <a href="#" class="feature">
+        <img src="https://cdn-icons-png.flaticon.com/128/2921/2921222.png" alt="Boost Icon" width="32">
         <h3>Boosting Services</h3>
         <p>Amplify your posts with our premium boosting services for maximum visibility.</p>
-      </div>
-      <div class="feature">
-        <h3>Business Database Access</h3>
-        <p>Exclusive access to our comprehensive business database for targeted marketing.</p>
-      </div>
+      </a>
+      <a href="https://mfvcz344q0.space.minimax.io/" target="_blank" class="feature">
+        <img src="https://cdn-icons-png.flaticon.com/128/535/535239.png" alt="Directory Icon" width="32">
+        <h3>Business Directory</h3>
+        <p>Exclusive access to our comprehensive business directory for targeted marketing.</p>
+      </a>
     </div>
   </section>
 
   <section class="campaign-section">
     <h2>Start Your Campaign Today</h2>
     <p>Join hundreds of businesses in La Romana who are growing their reach with our Facebook advertising platform.</p>
-    <button>Access Business Database</button>
+    <a href="https://mfvcz344q0.space.minimax.io/" target="_blank" class="btn-primary">Access Business Directory</a>
     <div class="campaign-grid">
       <div class="feature">
         <h3>Target Your Audience</h3>
@@ -87,7 +92,7 @@
       <ul class="features-list">
         <li>✔ Facebook Ad Placement</li>
         <li>✔ Professional Content Posting</li>
-        <li>✔ Business Database Access</li>
+        <li>✔ Business Directory Access</li>
         <li>✔ Monthly Analytics Report</li>
         <li>✔ 24/7 Customer Support</li>
         <li>✔ Campaign Optimization</li>
@@ -103,8 +108,64 @@
     <img src="sale.PNG" alt="Special Offer" class="promo-image">
   </section>
 
-  <footer>
-    &copy; 2025 LaRomana.com. All rights reserved.
+  <section class="form-section" id="contact">
+    <h2>Ready to Get Started?</h2>
+    <p>Contact us today for a free consultation</p>
+    <form id="signupForm">
+      <input type="text" name="name" placeholder="Full Name" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <input type="text" name="phone" placeholder="Phone">
+      <input type="text" name="company" placeholder="Company">
+      <select name="service">
+        <option value="">Select a service</option>
+        <option value="ads">Facebook Ads</option>
+        <option value="content">Content Posting</option>
+        <option value="boost">Boosting</option>
+        <option value="directory">Business Directory</option>
+      </select>
+      <textarea name="message" placeholder="Tell us about your Facebook marketing goals..." required></textarea>
+      <div class="g-recaptcha" data-sitekey="your-public-site-key"></div>
+      <br>
+      <button type="submit" class="btn-primary">Send Message</button>
+    </form>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-section">
+        <h4>LaRomana.com</h4>
+        <p>Your trusted partner for Facebook marketing success in the Dominican Republic.</p>
+      </div>
+      <div class="footer-section">
+        <h4>Services</h4>
+        <ul>
+          <li><a href="#">Facebook Ad Placement</a></li>
+          <li><a href="#">Content Posting</a></li>
+          <li><a href="#">Post Boosting</a></li>
+          <li><a href="#">Business Database</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>Company</h4>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Case Studies</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>Contact</h4>
+        <ul>
+          <li>La Romana, Dominican Republic</li>
+          <li>+1 (809) 123-4567</li>
+          <li><a href="mailto:info@laromana.com">info@laromana.com</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      &copy; 2024 LaRomana.com. All rights reserved.
+    </div>
   </footer>
 
   <script>
@@ -115,5 +176,6 @@
       window.location.href = 'thank-you.html';
     });
   </script>
+
 </body>
 </html>
