--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <option value="directory">Business Directory</option>
       </select>
       <textarea name="message" placeholder="Tell us about your Facebook marketing goals..." required></textarea>
-      <div class="g-recaptcha" data-sitekey="your-public-site-key"></div>
+      <div class="g-recaptcha" data-sitekey="6LfPPnErAAAAAFDYOHdJKeTCEfjazor0m3k2gCi5"></div>
       <br>
       <button type="submit" class="btn-primary">Send Message</button>
     </form>
