--- a/formtest.html
+++ b/formtest.html
@@ -1,7 +1,7 @@
 <!-- Complete form with reCAPTCHA and custom fields -->
 <form action="https://api.staticforms.xyz/submit" method="POST">
     <!-- Required: Your Static Forms API key -->
-    <input type="hidden" name="apiKey" value="YOUR_API_KEY">
+    <input type="hidden" name="apiKey" value="6LfPPnErAAAAAFDYOHdJKeTCEfjazor0m3k2gCi5">
   
     <!-- Enable reply-to functionality -->
     <input type="hidden" name="replyTo" value="@">
